--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -6,9 +6,10 @@
           onload="if(media!='all')media='all'">
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/group_profile.css"
           onload="if(media!='all')media='all'">
-{% block extra-js %}
-     <script type="text/javascript" src="{{ STATIC_URL }}js/groups.js"></script>
-{% endblock %}
+    {% block extra-js %}
+        <script type="text/javascript" src="{{ STATIC_URL }}js/groups.js"></script>
+
+    {% endblock %}
 {% endblock %}
 {% block title %} <title> Grupo {{ group_profile.name }}</title> {% endblock %}
 {% block content %}
@@ -39,7 +40,8 @@
                                 <div class="unstyled content" id="hood-tabs">
                                     {% comment %}
                                             Incluimos el tab timeline
-                                        {% include "account/tab-timeline.html" %} {% endcomment %}
+                                     {% endcomment %}
+                                    {% include "groups/tab-timeline.html" %}
                                     {% comment %}
                                             Incluimos el tab comentarios
                                         {% endcomment %}
@@ -53,13 +55,12 @@
                                                 </a>
                                             </div>
                                         {% endif %}
-                                        {% comment %}
-                                            {% include "account/profile_comments.html" %}
-                                            {% endcomment %}
+                                        {% include "groups/comentarios_entries.html" %}
                                     </div>
                                     {% comment %}
-                                            Incluimos el tab amigos
-                                        {% include "account/tab-amigos.html" %}{% endcomment %}
+                                        Incluimos el tab amigos
+                                    {% endcomment %}
+                                    {% include "groups/tab-usuarios.html" %}
                                 </div>
                             </div>
                         </div>
@@ -69,5 +70,23 @@
         </div>
     </div>
     <script src="{{ STATIC_URL }}js/jquery.easytabs.js" type="text/javascript"></script>
-    <script async src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('#tab-container').easytabs({
+            defaultTab: "#li-tab-comentarios",
+            animate: true,
+            animationSpeed: "fast",
+            updateHash: false
+        });
+    </script>
+    {% block js %}
+        {{ block.super }}
+        <script src="{{ STATIC_URL }}js/el-pagination.js"></script>
+        <script>
+            $.endlessPaginate({
+                paginateOnScroll: true,
+                paginateOnScrollMargin: 20,
+            });
+        </script>
+    {% endblock %}
 {% endblock %}
