--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -1,15 +1,20 @@
 {% comment %}
-  Menu de notificaciones verticales
+Menu de notificaciones verticales
 {% endcomment %}
 {% load notifications_tags %}
-<script src="{{STATIC_URL}}js/notify.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
+<script src="{{STATIC_URL}}js/socket_notifications.js" type="text/javascript"></script>
+<script>
+    UTILS_N.init([{{ user.pk }}]);
+    UTILS_N.conn_socket();
+</script>
+
 {% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' menu_id='list-notify' %}
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
 {% comment %}
- {% endcomment %}
+{% endcomment %}
 <div id="notification-menu" class="side-nav nav-vertical-and-chat">
     <ul id="list-notify" class="collection">
-        {% live_notify_list %}
     </ul>
     <div class="nav-vertical-controls">
         <div class="divider"></div>
