--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -185,6 +185,9 @@ body > .container
 
 /* NOTIFICACIONES - CHAT MENU VERTICAL */
 .nav-vertical-and-chat
+  .collection .avatar .circle img
+    width: 100%
+    height: 100%
   & .nav-vertical-controls
     position: absolute
     display: block
@@ -418,7 +421,7 @@ ul#vertical-menu
       > i
         color: #1e88e5 !important
     > a >
-    i, [ class ^= "mdi-" ], [ class *= "mdi-" ], i . material-icons
+    i, [ class ^= "mdi-" ], [ class *= "mdi-" ], i .material-icons
       color: rgba(0, 0, 0, 0.54)
       float: left
       line-height: 48px
