--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -2,6 +2,7 @@
 Menu de notificaciones verticales
 {% endcomment %}
 {% load humanize %}
+{% load avatar_tags %}
 <script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
 <script src="{{ STATIC_URL }}js/socket_notifications.js" type="text/javascript"></script>
 <script>
@@ -17,7 +18,12 @@ UTILS_N.conn_socket();
 		<li class="collection-item avatar" data-id="notification.id">
 			<a onclick="AJAX_mark_read(this)" class="fa fa-remove" id="mark-as-read-notification"
 							  data-notification="{{ notification.slug }}"></a>
+			{% comment %}
 			<img class="circle" src="{{ notification.actor_avatar }}">
+			{% endcomment %}
+			<div class="circle">
+				{% avatar notification.actor 64 %}
+			</div>
 			{% if notification.level != "new_follow" %}
 			<a class="title" href="/profile/{{ notification.actor }}">{{ notification.actor }}</a>
 			{% endif %}
