--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -157,8 +157,8 @@
                                                     class="fa fa-trash"></i>
                                             </li>
                                         {% endif %}
-                                        {% if user.is_authenticated and user.id != node.p_author.id %}
-                                            {% comment %} Si el usuario esta logueado y no es al autor {% endcomment %}
+                                        {% if user.is_authenticated %}
+                                            {% comment %} Si el usuario esta logueado {% endcomment %}
                                             <li title="No me gusta" class="hate-comment" id="fa-hate"
                                                 {% if node.pk|user_in_hated_photo_list:user.pk %}style="color: rgb(186, 104, 200);"{% endif %}>
                                                 <i class="fa fa-angle-down" aria-hidden="true"></i>
