--- a/photologue/templates/photologue/publication_detail.html
+++ b/photologue/templates/photologue/publication_detail.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col l3 offset-l5 offset-s3 s6 z-depth-2 board-photo">
                 <div class="col l3 s6 board-photo-container">
-                    <img src="{% if photo.thumbnail %}{{ photo.thumbnail.url }}{% else %}{{photo.image.url}}{% endif %}">
+                    <img src="{% if photo.thumbnail %}{{ photo.thumbnail.url }}{% elif photo.image %}{{ photo.image.url }}{% else %}{{ photo.url_image }}{% endif %}">
                 </div>
                 <div class="col l9 s6 board-photo-link">
                     <a href="/photo/{{ photo.slug }}">Ver imágen</a>
