--- a/skyfolk/templates/channels/new_publication.html
+++ b/skyfolk/templates/channels/new_publication.html
@@ -4,10 +4,10 @@
 {% load humanize %}
 {% load embed_video_tags %}
 {% load static %}
-<div class="row infinite-item wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
+<div class="row {% if node.level == 0 %}infinite-item wrapper{% endif %}" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
     <div class="col s12">
-        <div class="col s12"
-        {% if node.level > 0 and node.level < 3 %}style="min-width: 98% !important;"{% endif %}>
+        <div class="col s12 {% if node.level > 0 %}wrapper{% endif %}""
+        {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
         <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
@@ -245,6 +245,30 @@
 <div class="wrapper-reply">
     {% include "account/new_reply.html" %}
 </div>
+    {% if not node.is_leaf_node %}
+                        <ul class="children">
+                            {{ children }}
+                        </ul>
+                        <div class="row">
+                            <div class="col s12">
+                                {% with node.get_children_count as descendants %}
+                                    {% if descendants > 0 %}
+                                        <a class="waves-effect waves-light btn-large blue darken-1 white-text center load_more_publications"
+                                           href="#"
+                                           data-id="{{ node.id }}" data-created="{{ node.created|date:"U" }}"><i
+                                                class=" material-icons left">expand_more</i>Cargar
+                                            comentarios (<span
+                                                    class="child_count">{{ descendants }}</span>)</a>
+                                    {% endif %}
+                                {% endwith %}
+                                <div>
+                                    <div class="progress load_publications_descendants" style="display: none">
+                                        <div class="indeterminate blue darken-1"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
 </div>
 </div>
 </div>
