--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -8,7 +8,7 @@ Template para el perfil de cada usuario
 {% load dash_tags %}
 {% load user_guide_tags %}
 {% load render_bundle from webpack_loader %}
-{% block title %} <title> Perfil de {{ user_profile.username }}</title> {% endblock %}
+{% block title %}<title> Skyfolk // Perfil de {{ user_profile.username }}</title> {% endblock %}
 {% block include_files %}
 {% endblock %}
 
