--- a/dash/templates/dash/add_dashboard_entry_ajax.html
+++ b/dash/templates/dash/add_dashboard_entry_ajax.html
@@ -1,11 +1,10 @@
 {% load i18n %}
 <div class="container">
-    <div class="row">
+    <div class="row center">
         <div class="col l4 s12 offset-l4">
             <div class="wrapper-bg"></div>
             <div class="hero-unit-small">
-                <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Add {{ plugin_name }} to
-                Dashboard{% endblocktrans %}</h2>
+                <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Add {{ plugin_name }} to Dashboard{% endblocktrans %}</h2>
             </div>
         </div>
         <div class="col l4 s12 offset-l4">
