--- a/skyfolk/templates/emails/new_notification.html
+++ b/skyfolk/templates/emails/new_notification.html
@@ -1,6 +1,10 @@
+{% extends "emails/base_email.html" %}
+
+{% block content %}
 <p>
     ¡Hola <b>{{ to_user }}</b>! - Tienes una nueva notificación.
 </p>
 <p>
     {{ description|safe }}
 </p>
+{% endblock %}
