--- a/user_profile/templates/user_profile/user_content.html
+++ b/user_profile/templates/user_profile/user_content.html
@@ -1,5 +1,5 @@
 {% extends "account/base_interface.html" %}
-{% load app_filters avatar_tags static humanize %}
+{% load app_filters avatar_tags static humanize embed_video_tags %}
 {% block title %}Mi ensalada de frutas{% endblock %}
 
 {% block extra-css %}
@@ -58,13 +58,63 @@
                                 </div>
                                 <div class="row" style="word-wrap: break-word;">
                                     <p>{{ item.content|truncatechars_html:"150"|safe }}</p>
-                                    <br>
-                                    {% for i in item.images.all %}
-                                        <div class="col s12">
-                                            <img src="{{ i.image.url }}" alt="{{ item.author }}" width="100%"
-                                                 height="100%"/>
+                                    {% with item.shared_publication as shared_publication %}
+                                            {% include "account/shared_publication.html" %}
+                                        {% endwith %}
+                                        {% with item.shared_group_publication as shared_publication %}
+                                            {% include "account/shared_publication.html" %}
+                                        {% endwith %}
+                                    {% with item.images.all as images %}
+                                        {% if images %}
+                                        <br>
+                                        <div class="row images">
+                                            {% for image in images %}
+                                                {% if image.image %}
+                                            <div class="col s12 center">
+                                                <img class="lazyload responsive-img" data-src="{{image.image.url}}" alt="Imagen de: {{ item.author }}" title="Imagen de: {{ item.author }}">
+                                            </div>
+                                                {% endif %}
+                                            {% endfor %}
                                         </div>
-                                    {% endfor %}
+                                        {% endif %}
+                                        {% endwith %}
+                                        {% with item.videos.all as videos %}
+                                        {% if videos %}
+                                        <br>
+                                        <div class="row videos">
+                                            {% for video in videos %}
+                                                {% if video.video %}
+                                            <div class="col s12 center">
+                                                <video class="responsive-video" controls loop>
+                                                    <source src="{{ video.video.url }}" type="video/mp4">
+                                                    </video>
+                                                </div>
+                                                {% endif %}
+                                                {% endfor %}
+                                            </div>
+                                            {% endif %}
+                                            {% endwith %}
+                                            {% if item.extra_content %}
+                                            {% if item.extra_content.video %}
+                                            {% video item.extra_content.video as my_video %}
+                                            {% video my_video "100% x 100%" %}
+                                            {% endvideo %}
+                                            {% else %}
+                                            {% comment %} Para publicaciones con URL {% endcomment %}
+                                            <div class="card small">
+                                                <div class="card-image">
+                                                    <img class="lazyload" data-src="{% if item.extra_content.image %}{{ item.extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                    <span class="card-title white-text">{{ item.extra_content.title }}</span>
+                                                </div>
+                                                <div class="card-content">
+                                                    <p>{{ item.extra_content.description }}</p>
+                                                </div>
+                                                <div class="card-action">
+                                                    <a href="{{ item.extra_content.url }}">Ver</a>
+                                                </div>
+                                            </div>
+                                            {% endif %}
+                                            {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -154,8 +204,9 @@
             horizontalOrder: true,
             transitionDuration: '0.3s'
         });
+
         $grid.imagesLoaded().progress(function () {
             $grid.masonry('layout');
-        })
+        });
     </script>
 {% endblock %}
