--- a/skyfolk/templates/services/services.html
+++ b/skyfolk/templates/services/services.html
@@ -7,7 +7,9 @@
 {% block extra-css %}
     <style>
         .card-image img {
-            max-height: 250px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     </style>
 {% endblock %}
@@ -25,7 +27,7 @@
                 <h3>Servicios activos</h3>
                 {% for service in services_list %}
                 <div class="col s12 m3">
-                  <div class="card">
+                  <div class="card small">
                     <div class="card-image">
                       <img src="{% if service.name.thumbnail %}{{ service.name.thumbnail.url }}{% else %}{% static "img/nuevo_back.png" %}{% endif %}">
                       <span class="card-title">{{ service.name|service_readable|safe|escape }}</span>
@@ -71,6 +73,10 @@
             </div>
         </div>
         {% endfor %}
+    </div>
+    {% else %}
+    <div class="row center">
+        <p class="flow-text">Actualmente no tienes ningún servicio activo.</p>
     </div>
     {% endif %}
     <div class="divider"></div>
