--- a/invitations/templates/invitations/email/email_invite_message.html
+++ b/invitations/templates/invitations/email/email_invite_message.html
@@ -1,7 +1,7 @@
 {% extends "emails/base_email.html" %}
 {% load i18n %}
 {% block header_content %}
-    ¡Has recibido una invitación para Skyfolk!
+    Â¡Has recibido una invitaciÃ³n para Skyfolk!
 {% endblock %}
 {% block title %}
     <a href="https://{{ site_name }}/profile/{{ inviter }}/">@{{ inviter }}</a> quiere que te unas a Skyfolk
@@ -9,21 +9,19 @@
 {% block content %}
     {% autoescape off %}
         {% blocktrans %}
-        ¡Gracias por participar en la BETA 1 de skyfolk.net!
+        Â¡Gracias por participar en la BETA 1 de skyfolk.net!
 
-        Has recibido este e-mail porque has solicitado en algún momento participar en la BETA de skyfolk.net
-
-        Nuestro objetivo, o ¿Qué es skyfolk?
-
-        Si tienes varias redes sociales (Twiter, Facebook, Instagram, Pinterest...) habrás notado que debes entrar en varias paginas para tener una imagen general de qué está ocurriendo. Eso es exactamente lo que queremos solucionar.
-
-        Con Skyfolk podrás tener en un único sitio todas tus redes sociales e interactuar con éstas mediante pequeñas aplicaciones (pines) que te darán una visión global de lo que ocurre con tu identidad digital.
-
-        Aqui tienes una invitación para participar en la BETA, pero antes, por favor, ayúdanos facilitandonos algo de información sobre ti rellenando el siguiente cuestionario:
-
-        Cuestionario: https://docs.google.com/a/skyfolk.net/forms/d/104JoI-pMAjUCKs2bwYVylJpHZmW5h9tsySduGcX5iNw/edit?usp=drivesdk
-
-        Invitación: {{ invite_url }}
+        Has recibido este e-mail porque has solicitado en algÃºn momento participar en la BETA de skyfolk.net
+        
+        Nuestro objetivo, o Â¿QuÃ© es skyfolk?
+        
+        Si tienes varias redes sociales (Twiter, Facebook, Instagram, Pinterest...) habrÃ¡s notado que debes entrar en varias paginas para tener una imagen general de quÃ© estÃ¡ ocurriendo. Eso es exactamente lo que queremos solucionar.
+        
+        Con Skyfolk podrÃ¡s tener en un Ãºnico sitio todas tus redes sociales e interactuar con Ã©stas mediante pequeÃ±as aplicaciones (pines) que te darÃ¡n una visiÃ³n global de lo que ocurre con tu identidad digital.
+        
+        Aqui tienes una invitaciÃ³n para participar en la BETA, pero antes, por favor, ayÃºdanos facilitandonos algo de informaciÃ³n sobre ti rellenando el siguiente cuestionario: <a href="https://docs.google.com/a/skyfolk.net/forms/d/104JoI-pMAjUCKs2bwYVylJpHZmW5h9tsySduGcX5iNw/edit?usp=drivesdk">Cuestionario</a>
+        
+        InvitaciÃ³n: {{ invite_url }}
         {% endblocktrans %}
     {% endautoescape %}
 {% endblock %}
