--- a/skyfolk/templates/channels/new_publication.html
+++ b/skyfolk/templates/channels/new_publication.html
@@ -5,7 +5,7 @@
 {% load embed_video_tags %}
 {% load emoji_tags %}
 {% load static %}
-<div class="row {% if node.level == 0 %}infinite-item wrapper{% endif %}" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
+<div class="row {% if node.level == 0 %}infinite-item{% endif %}wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
         <div class="box">
             <div class="row">
                 <div class="articulo col s12">
